[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-env-validator"
version = "0.1.4"
description = "Schema-based environment variable validation with type coercion and helpful error messages"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["env", "environment", "validation", "config", "schema"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-env-validator#readme"
Repository = "https://github.com/philiprehberger/py-env-validator"
Issues = "https://github.com/philiprehberger/py-env-validator/issues"
Changelog = "https://github.com/philiprehberger/py-env-validator/blob/main/CHANGELOG.md"
